[package]
name = "zFFI"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Matheus Catarino <matheus-catarino@hotmail.com>"]
keywords = ["ffi", "rust", "zig"]
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type =["dylib"]

[build-dependencies]
cbindgen = { git = "https://github.com/kassane/cbindgen", branch = "zig-bindgen" }
